tests/type_check/build/struct_duplicate_field_name.err.expected
error: at 4:13: [TC-DuplicateStructField] In struct 'S', field 'x' is declared more than once
   |
 4 |             x: bool
   |             ^^^^^^^
